--- a/package.json
+++ b/package.json
@@ -8,10 +8,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "axios": "^0.21.0",
-    "jest": "^26.6.1"
+    "axios": "^0.21.4",
+    "jest": "^26.6.3"
   },
   "dependencies": {},
   "keywords": [],
-  "description": ""
+  "description": "Jest is a delightful JavaScript Testing Framework",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/catgsmith/Jest-Tutorial.git"
+  },
+  "bugs": {
+    "url": "https://github.com/catgsmith/Jest-Tutorial/issues"
+  },
+  "homepage": "https://github.com/catgsmith/Jest-Tutorial#readme"
 }
